--- a/Project 2/Kennedy.html
+++ b/Project 2/Kennedy.html
@@ -3,18 +3,18 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Kennedy's Websight</title>
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="Bacon.css">
 </head>
 <body>
 	<header>
-	<h1>Welcome to ken's page<h1>
+	<h1>Welcome to Ken's page<h1>
 	</header>
 	
 	<nav>
 		<ul>
-			<li>Home</li>
-			<li>Tutorials</li>
-			<li>Podcast</li>
+			<li>Mi gusta Bacon</li>
+			<li>Spanish sucks</li>
+			<li>Can't wait for the weekend!</li>
 		<ul>
 	</nav>
 	
@@ -22,37 +22,37 @@
 		<article>
 			<header>
 				<hgroup>
-				<h1>Title of the Article</h1>
-				<h2>Subtitle for article!</h2>
+				<h2 id=tuna>Food</h2>
+				<h3>Great Snacks!!</h3>
 				</hgroup>
 			</header>
-			<p>This is the sickest websight in history!</p>
+			<p>Bagels and biscuits and gravy are amazing :D</p>
 			<footer>
-				<p>- Written by Kennedy rainville</p>
+				<p>- Preference of Kennedy rainville</p>
 			</footer>
 		</article>
 		
 		<article>
 			<header>
 				<hgroup>
-				<h1>Title of the Article</h1>
-				<h2>Subtitle for article!</h2>
+				<h4>Hobbies</h4>
+				<h5>After school stuff!</h5>
 				</hgroup>
 			</header>
-			<p>This is the next sickest article in history!</p>
+			<p>Homework... SIKE!</p>
 			<footer>
-				<p>- Written by Kennedy rainville</p>
+				<p>Kennedy rainville approves this message</p>
 			</footer>
 		</article>
 	</section>
 	
 	<aside>
-		<h4>News</h4>
+		<h6>News</h6>
 		I eat rare pepe's
 	</aside>
 	
 	<footer>
-		Copyright Kennedyrainville 2017
+		Copyright Kennedy Rainville 2017
 	</footer>
 </body>
 </html>
