--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
 						<li>
 							<img src="images/berries.png" alt="">
 							<div>
-								<h1>BERRIES ON THE GROVE</h1>
+								<h1>Best YogurtBERRIES</h1>
 								<span>By Kennedy on September 6, 2017</span>
 								<p>NOW THIS YOGURT RIGHT HERE IS MY FAVORITE BECAUSE, IT HAS STRAW BERRIES AND YOGURT</p>
 								
@@ -71,9 +71,9 @@
 					<a href="blog.html" class="load">Load More</a>
 				</div>
 				<div class="sidebar">
-					<h1>Recent Posts</h1>
+					<h1>Low Cal</h1>
 					<img src="images/on-diet.png" alt="">
-					<h2>ON THE DIET</h2>
+					<h2>DIET</h2>
 					<span>By Kennedy on September 6, 2017</span>
 					<p>Kiwi is okay with oats but, theres way better out there</p>
 					
@@ -88,7 +88,7 @@
 					<a href="http://turtles.com/go/googleplus/" class="googleplus">googleplus</a>
 					<a href="http://turtles.com/fwtemplates/" class="pinterest">pinterest</a>
 				</div>
-				<p>&copy; 2023 Freeeze. All Rights Reserved.</p>
+				<p>&copy; Kennedy Boi. Some All Rights Reserved.</p>
 			</div>
 		</div>
 	</div>
