--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 			<div class="body">
 				<div>
 					<div>
-						<h1>NEW PRODUCT</h1>
-						<h2>The Twist of Healthy Yogurt</h2>
-						<p>This website template has been designed by freewebsitetemplates.com for you, for free. You can replace all this text with your own text.</p>
+						<h1>Fruit</h1>
+						<h2>Healthy Fruit</h2>
+						<p>Healthy fruit makes everyones day a little bit better.</p>
 					</div>
 					<img src="images/yogurt.jpg" alt="">
 				</div>
@@ -62,19 +62,19 @@
 					<ul>
 						<li>
 							<a href="product.html" class="product"></a>
-							<h1>PRODUCTS</h1>
+							<h1>Fruity</h1>
 						</li>
 						<li>
 							<a href="about.html" class="about"></a>
-							<h1>OUR STORY</h1>
+							<h1>Spanish Fruit issue</h1>
 						</li>
 						<li>
 							<a href="product.html" class="flavor"></a>
-							<h1>FLAVORS</h1>
+							<h1>Fruits</h1>
 						</li>
 						<li>
 							<a href="contact.html" class="contact"></a>
-							<h1>OUR LOCATION</h1>
+							<h1>LOCATION</h1>
 						</li>
 					</ul>
 				</div>
@@ -83,12 +83,12 @@
 		<div id="footer">
 			<div>
 				<div class="connect">
-					<a href="http://freewebsitetemplates.com/go/facebook/" class="facebook">facebook</a>
-					<a href="http://freewebsitetemplates.com/go/twitter/" class="twitter">twitter</a>
-					<a href="http://freewebsitetemplates.com/go/googleplus/" class="googleplus">googleplus</a>
-					<a href="http://pinterest.com/fwtemplates/" class="pinterest">pinterest</a>
+					<a href="http://turtles.com/go/facebook/" class="facebook">facebook</a>
+					<a href="http://turtles.com/go/twitter/" class="twitter">twitter</a>
+					<a href="http://turtles.com/go/googleplus/" class="googleplus">googleplus</a>
+					<a href="http://turtles.com" class="pinterest">pinterest</a>
 				</div>
-				<p>&copy; 2023 Freeeze. All Rights Reserved.</p>
+				<p>&copy; Kennedy boi. All Rights Reserved This Time.</p>
 			</div>
 		</div>
 	</div>
