--- a/product.html
+++ b/product.html
@@ -85,8 +85,8 @@
 				</ul>
 				<ul>
 					<li>
-						<h1>Fruit Blast</h1>
-						<p>This website template has been designed by freewebsitetemplates.com for you, for free.</p>
+						<h1>Super Good Fruits</h1>
+						<p>Grapes are my friend raymons favorite and pineapples are his second favorite</p>
 					</li>
 					<li>
 						<img src="images/grapes.jpg" alt="">
